# QMS

ESP32/: CMakeLists.txt
ESP32/main/: CMakeLists.txt  default.h  http_app.c  idf_component.yml  main.c  memory.c  memory.h  pins.c  pins.h  web_server.c  web_server.h  websocket.c  websocket.h  wifi_set.c  wifi_set.h
ESP32/main/config_pages/: index.html
webapp/: package-lock.json  package.json  tailwind.config.ts
webapp/app/: globals.css  layout.tsx  page.tsx
webapp/app/display/: page.tsx
webapp/app/settings/: page.tsx
webapp/components/ui/: sidebar.tsx  sonner.tsx
webapp/context/: AnnoncementsContext.tsx  TauriL;istener.tsx  TauriListener.tsx
webapp/lib/: mocData.tsx
webapp/src-tauri/: .gitignore  Cargo.toml  qms.db  tauri.conf.json
webapp/src-tauri/src/: lib.rs
